Fixed matrix solution validity check in C lib

--- a/LinSysSolverLib/LinSysSolverLib.vcxproj
+++ b/LinSysSolverLib/LinSysSolverLib.vcxproj
@@ -145,7 +145,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="LinSysSolver.cpp" />
+    <ClCompile Include="LinSysSolver.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
