--- a/LowLevelLib/LinSysSolverAsmLib/LinSysSolverAsmLib.vcxproj
+++ b/LowLevelLib/LinSysSolverAsmLib/LinSysSolverAsmLib.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{8da9e0f2-bfc7-484f-b6af-b4d64fe4afe4}</ProjectGuid>
     <RootNamespace>LinSysSolverAsmLib</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>LinSysSolverAsmDebugInterface</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -127,8 +128,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Lib.cpp" />
-    <ClCompile Include="LinSysSolverAsmLib.cpp" />
+    <ClCompile Include="Libc.c" />
+    <ClCompile Include="LinSysSolverAsmLibDebugInterface.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Lib.h" />
